--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,10 @@
 html, body {
     height: 100%;
 }
+
+@media screen and (min-width: 480px) {
+    div{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    }
