--- a/css/main.css
+++ b/css/main.css
@@ -2,13 +2,57 @@
     box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
+html,body{
+    margin: 0 auto;
+    background-color: #F2EFE9;
 }
 
-@media screen and (min-width: 480px) {
-    div{
-        display: flex;
-        flex-wrap: wrap;
-    }
-    }
+@media screen and (max-width: 428px) {
+div {
+    display: flex;
+    flex-wrap: wrap;
+}
+.back i{
+    padding: 45px;
+}
+/*USER.PHP STYLING*/
+.userprofile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.userpic {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.userpic img {
+    border-radius: 50%;
+    object-fit: cover;
+    width: 156px;
+    height: 156px;
+    position: relative;
+    bottom: 50px;
+}
+.userprofile h2 {
+    font-family: 'Franklin Gothic Medium';
+    font-size: 35px;
+    font-weight: normal;
+}
+.userprofile h4 {
+    font-family: 'Helvetica light';
+    font-size: 18px;
+    font-weight: normal;
+}
+.userprofile button {
+    font-family: 'Helvetica light';
+    font-size: 25px;
+    text-align: center;
+    width: 308px;
+    height: 50px;
+    background-color: white;
+    border-color: #707070;
+    border-width: 1px;
+
+}
+}
