--- a/css/main.css
+++ b/css/main.css
@@ -46,13 +46,11 @@ div {
 }
 .userprofile a {
     font-family: 'Helvetica light';
-    font-size: 25px;
-    text-align: center;
-    width: 308px;
-    height: 50px;
+    color: #707070;
     background-color: white;
-    border-color: #707070;
-    border-width: 1px;
-
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+    padding: 10px 100px
 }
 }
