--- a/css/main.css
+++ b/css/main.css
@@ -12,8 +12,11 @@ div {
     display: flex;
     flex-wrap: wrap;
 }
-.back i{
+.back i {
     padding: 45px;
+}
+.settings i {
+    padding-right: 45px;
 }
 /*USER.PHP STYLING*/
 .userprofile {
@@ -53,6 +56,7 @@ div {
     font-size: 20px;
     padding: 10px 100px
 }
+/*SEARCH.PHP STYLING*/
 .container{
     width: 100%;
     min-height: 100vh;
