--- a/css/main.css
+++ b/css/main.css
@@ -83,3 +83,48 @@ html,body{
     background-color: blueviolet;
     background-position: center;
 }
+/* Message container - Person1 */
+.container1msg{
+    border: 2px solid #dedede;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
+    overflow: auto;
+  }
+  
+  /* Message container - Person2 */
+  .container2msg {
+    border-color: #ccc;
+    background-color: #ddd;
+    overflow: auto;
+  }
+  
+  /* Style Img - Person1 */
+  .container1msg img.Person1 {
+    float: left;
+    max-width: 60px;
+    width: 100%;
+    margin-right: 20px;
+    border-radius: 50%;
+  }
+  
+  /* Style Img - Person2 */
+  .container2msg img.Person2 {
+    float: right;
+    margin-left: 20px;
+    border-radius: 50%;
+    max-width: 60px;
+  }
+  
+  /* Text from Person1 */
+  .message-sent1 {
+    float: right;
+    color: #aaa;
+  }
+  
+  /* Text from Person2 */
+  .message-sent2 {
+    float: left;
+    color: #999;
+  }
