--- a/css/main.css
+++ b/css/main.css
@@ -85,8 +85,8 @@ html,body{
 }
 /* Message container - Person1 */
 .container1msg{
-    border: 2px solid #dedede;
-    background-color: #f1f1f1;
+    border: 2px solid #707070;
+    background-color: #6290C8;
     border-radius: 5px;
     padding: 10px;
     margin: 10px 0;
@@ -95,8 +95,11 @@ html,body{
   
   /* Message container - Person2 */
   .container2msg {
-    border-color: #ccc;
-    background-color: #ddd;
+    border-color: #707070;
+    background-color: #403D39;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
     overflow: auto;
   }
   
@@ -119,11 +122,40 @@ html,body{
   /* Text from Person1 */
   .message-sent1 {
     float: right;
-    color: #aaa;
+    color: #FFFFFF;
   }
   
   /* Text from Person2 */
   .message-sent2 {
     float: left;
-    color: #999;
+    color: #FFFFFF;
   }
+
+  /* Header for Messages */
+  .header {
+  padding: 60px;
+  margin-bottom: 30px;
+  text-align: center;
+  background: ##F2EFE9;
+  color: white;
+  font-size: 30px;
+}
+
+/* Profile Image */
+    .header img{
+    max-width: 200px;
+    width: auto;
+    float: left;
+    margin-left: 20px;
+    border-radius: 50%;
+    }
+
+    .footer {
+        padding: 20px; 
+        align:center;
+        font-size: 20px;  
+    }
+
+    .footer input#txtmsg {
+        width: 80% auto;
+    }
