--- a/css/main.css
+++ b/css/main.css
@@ -1,80 +1,107 @@
-* {
-    box-sizing: border-box;
-}
-
 html,body{
     margin: 0 auto;
     background-color: #F2EFE9;
 }
 
+@font-face {
+    font-family: sport;
+    src: url(oldsport.ttf);
+}
+
 @media screen and (max-width: 428px) {
-    div {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .back i {
-        padding: 45px;
-    }
-    /*CLUBPROFILE.PHP STYLING*/
-    .clubicons {
-        float: right;
-    }
-    .clubicons i {
-        padding: 4px;
-    }
-    .userprofile ul {
-        list-style-type: none;
-        margin: 5px;
-        padding: 5px;
-    }
-    .userprofile li {
-        float: left;
-        padding: 10px;
-    }
-    .clubpost h2 {
-        color: #5E2BFF;
-    }
-    /*USER.PHP STYLING*/
-    .userprofile {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .userpic {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .userpic img {
-        border-radius: 50%;
-        object-fit: cover;
-        width: 156px;
-        height: 156px;
-        position: relative;
-        margin-top: 20px;
-    }
-    .userprofile h2 {
-        font-family: 'Franklin Gothic Medium';
-        font-size: 35px;
-        font-weight: normal;
-    }
-    .userprofile h4 {
-        font-family: 'Helvetica light';
-        font-size: 18px;
-        font-weight: normal;
-        text-align: center;
-        padding: 10px;
-    }
-    .userprofile a {
-        font-family: 'Helvetica light';
-        color: #707070;
-        background-color: white;
-        text-decoration: none;
-        text-align: center;
-        font-size: 20px;
-        padding: 10px 100px
-    }
-    }
+div {
+    display: flex;
+    flex-wrap: wrap;
+}
+.back i {
+    padding: 45px;
+}
+.pagetitle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0px;
+}
+.pagetitle h2 {
+    font-family: sport;
+    font-weight: normal;
+    color: #5E2BFF;
+    font-size: 35px;
+
+}
+/*CREATEPOST.PHP STYLING*/
+.eventform form {
+    border-color: #707070;
+    padding: 10px;
+    margin: 20px;
+}
+.eventform input {
+    font-family: 'Helvetica light';
+    font-size: 20px; 
+    padding: 10px;
+}
+/*CLUBPROFILE.PHP STYLING*/
+.clubicons {
+    float: right;
+}
+.clubicons i {
+    padding: 4px;
+}
+.userprofile ul {
+    list-style-type: none;
+    margin: 5px;
+    padding: 5px;
+}
+.userprofile li {
+    float: left;
+    padding: 10px;
+}
+.clubpost h2 {
+    color: #5E2BFF;
+    font-family: 'Franklin Gothic Medium';
+
+}
+/*USER.PHP STYLING*/
+.userprofile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.userpic {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.userpic img {
+    border-radius: 50%;
+    object-fit: cover;
+    width: 156px;
+    height: 156px;
+    position: relative;
+    margin-top: 20px;
+}
+.userprofile h2 {
+    font-family: 'Franklin Gothic Medium';
+    font-size: 35px;
+    font-weight: normal;
+}
+.userprofile h4 {
+    font-family: 'Helvetica light';
+    font-size: 18px;
+    font-weight: normal;
+    text-align: center;
+    padding: 10px;
+}
+.userprofile a {
+    font-family: 'Helvetica light';
+    color: #707070;
+    background-color: white;
+    text-decoration: none;
+    text-align: center;
+    font-size: 20px;
+    padding: 10px 100px
+}
+}
 /*SEARCH.PHP STYLING*/
 .container{
     width: 100%;
