--- a/css/main.css
+++ b/css/main.css
@@ -163,7 +163,7 @@ div {
   padding: 60px;
   margin-bottom: 30px;
   text-align: center;
-  background: ##F2EFE9;
+  background: #F2EFE9;
   color: white;
   font-size: 30px;
 }
