--- a/css/main.css
+++ b/css/main.css
@@ -177,7 +177,7 @@ div {
     border-radius: 50%;
     }
 
-    .footer {
+    .footer_msg {
         padding: 20px; 
         align:center;
         font-size: 20px;  
