--- a/css/main.css
+++ b/css/main.css
@@ -176,9 +176,40 @@ div {
     margin-left: 20px;
     border-radius: 50%;
     }
-
+/*footer input text message*/
     .footer_msg {
         padding: 20px; 
         align:center;
         font-size: 20px;  
     }
+/* Nav Bar for Events */
+      .navbar{
+        overflow:hidden;
+    }
+/* Style the links inside the navigation bar */
+    .navbar a {
+    text-align: center;
+    padding: 14px 16px;
+    font-size: 17px;
+    color: black;
+    }
+/* Add a color to the active/current link */
+    .navbar a.active {
+    color: #5E2BFF;
+    }
+
+/* Event styling */
+    .event{
+    border: 2px solid black;
+    background-color: white;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 10px 0;
+    overflow: auto;
+}
+/* Image in the event */
+    .event img {
+    float: left;
+    height: 20%;
+    margin-right: 20px;
+}
