--- a/css/main.css
+++ b/css/main.css
@@ -40,9 +40,10 @@ nav a i {
 h2 {
     color: #5E2BFF;
     font-family: sport;
+    margin-top: 10px;
 }
 
-/* SINGLE EVENT */
+/* EVENT */
 .event {
     border: 2px solid black;
     background-color: white;
@@ -71,7 +72,6 @@ h2 {
 .event--icons {
     display: flex;
     margin-left: auto;
-    /* padding: 0 5px; */
 }
 
 .event--icons i {
@@ -90,6 +90,29 @@ h2 {
 
 .scroll-item {
     flex: 0 0 90%;
+}
+
+.club-spotlight .scroll-item {
+    flex: 0 0 45%;
+}
+
+.spotlight {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 130px;
+}
+
+.spotlight--img {
+    border-radius: 50%;
+    width: 125px;
+    margin-bottom: 5px;
+}
+
+.spotlight--club-name {
+    text-align: center;
+    font-size: 20px;
 }
 
 
