--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,11 @@ html, body{
     font-family: Helvetica;
 }
 
+i {
+    font-size: 30px;
+    color: black;
+}
+
 /* NAVBAR */
 nav {
     background-color: #FFFFFF;
@@ -33,7 +38,6 @@ nav {
 
 nav a i {
     color: #5E2BFF;
-    font-size: 30px;
 }
 
 /* FONT STYLING */
@@ -41,6 +45,21 @@ h2 {
     color: #5E2BFF;
     font-family: sport;
     margin-top: 10px;
+}
+
+/* PAGE HEADER */
+.page-title {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.page-title .back-arrow {
+    position: absolute;
+    left: 15px;
 }
 
 /* EVENT */
@@ -76,6 +95,7 @@ h2 {
 
 .event--icons i {
     padding: 3px 5px;
+    font-size: 15px;
 }
 
 .scrolling-wrapper {
@@ -91,6 +111,8 @@ h2 {
 .scroll-item {
     flex: 0 0 90%;
 }
+
+/* CLUB SPOTLIGHT */
 
 .club-spotlight .scroll-item {
     flex: 0 0 45%;
@@ -113,6 +135,32 @@ h2 {
 .spotlight--club-name {
     text-align: center;
     font-size: 20px;
+}
+
+/* NOTIFICATIONS */
+.noti-bell {
+    float: right;
+}
+
+.noti-hr {
+    border-top: 1px solid #707070;
+    margin: 15px 0;
+}
+
+.noti-group--title {
+    font-family: 'Franklin Gothic Medium', 'Helvetica', sans-serif;
+}
+
+.noti-group--img {
+    width: 60px;
+    border-radius: 50%;
+    border: 1px solid #707070;
+    margin-right: 20px;
+}
+
+.noti-group--desc {
+    font-size: 12px;
+    margin-bottom: 0;
 }
 
 
