--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,13 @@ html, body{
     font-family: Helvetica;
 }
 
+/* FONT STYLING */
+h1, h2 {
+    color: #5E2BFF;
+    font-family: sport;
+    margin-top: 10px;
+}
+
 i {
     font-size: 30px;
     color: black;
@@ -40,11 +47,57 @@ nav a i {
     color: #5E2BFF;
 }
 
-/* FONT STYLING */
-h2 {
-    color: #5E2BFF;
-    font-family: sport;
-    margin-top: 10px;
+/* FORM */
+
+form {
+    padding: 15px;
+    text-align: center;
+}
+
+form input {
+    width: 230px;
+    margin-bottom: 20px;
+    padding: 5px;
+    border: 1px solid #707070;
+}
+
+.button {
+    padding: 10px 100px;
+    background-color: #6290C8;
+    border: 0;
+}
+
+.button.white {
+    background-color: #FFFFFF;
+    border: 1px solid #707070;
+    width: 230px;
+    padding: 15px 0;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.button a {
+    color: #FFFFFF;
+    font-size: 18px;
+}
+
+.button.white a {
+    color: #707070;
+}
+
+.button a:hover {
+    text-decoration: none;
+}
+
+/* WELCOME */
+.logo {
+    width: 150px;
+    margin: 50px 0 20px;
+}
+
+.welcome-account {
+    font-family: 'Franklin Gothic Medium', 'Helvetica', sans-serif;
+    margin: 40px 0 20px;
 }
 
 /* PAGE HEADER */
@@ -113,7 +166,6 @@ h2 {
 }
 
 /* CLUB SPOTLIGHT */
-
 .club-spotlight .scroll-item {
     flex: 0 0 45%;
 }
