--- a/css/main.css
+++ b/css/main.css
@@ -365,6 +365,33 @@ i.larger {
     font-size: 20px;
 }
 
+/* FILTERS */
+a.black-link {
+    color: #000000;
+}
+
+a.black-link:hover {
+    text-decoration: none;
+}
+
+.filters--fieldset {
+    background-color: #FFFFFF;
+    border: 1px solid #707070;
+    margin-bottom: 15px;
+}
+
+.filters--title {
+    font-family: 'Franklin Gothic Medium', sans-serif;
+    font-size: 20px;
+    margin-bottom: 10px;
+    width: initial;
+}
+
+.filters--input {
+    width: initial;
+    margin-bottom: 0;
+}
+
 /* FAVORITES */
 .favorites--navbar {
     -webkit-box-shadow: 0px 4px 6px 0px rgba(112,112,112,0.25);
