--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,10 @@ html, body{
     font-family: Helvetica;
 }
 
+.remove-spacing {
+    margin-bottom: -100px;
+}
+
 /* FONT STYLING */
 h1, h2 {
     color: #5E2BFF;
@@ -33,6 +37,10 @@ h2.black {
 i {
     font-size: 30px;
     color: black;
+}
+
+a, a:hover {
+    color: #5E2BFF;
 }
 
 /* NAVBAR */
@@ -120,6 +128,21 @@ button.following {
 .welcome-account {
     font-family: 'Franklin Gothic Medium', 'Helvetica', sans-serif;
     margin: 40px 0 20px;
+}
+
+/* UNIVERSITY SELECTION */
+.university--name {
+    font-family: 'Franklin Gothic Medium';
+    color: #000000;
+    font-size: 20px;
+}
+
+.university--name:hover {
+    color: #000000;
+}
+
+.university--location {
+    color: #403D39;
 }
 
 /* PAGE HEADER */
